[package]
name = "gametesting"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4"
pixels = "0.9.0"
winit = "0.26"
winit_input_helper = "0.12"
png = "0.17.7"

[profile.dev-info]
inherits = "release"
opt-level = 3
debug-assertions = true