[package]
name = "gametesting"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4"
pixels = "0.9.0"
winit = "0.26"
winit_input_helper = "0.12"
gilrs = "0.10.1"
png = "0.17.8"
bincode = "1.3.3"
serde = { version = "1.0.160", features = ["derive"] }
rayon = "1.7.0"

[profile.dev-info]
inherits = "release"
opt-level = 3
debug-assertions = true

[profile.release]
debug = false
strip = false  # Automatically strip symbols from the binary.
lto = false
opt-level = 3
#panic = "abort"
